[gd_scene load_steps=6 format=3 uid="uid://b3lfauj5finik"]

[ext_resource type="Script" uid="uid://cwgiy121lvt74" path="res://scripts/fight_options.gd" id="1_2dddj"]
[ext_resource type="PackedScene" uid="uid://cmlyjfrdq75xa" path="res://scenes/InFightOption.tscn" id="1_qsb8j"]
[ext_resource type="PackedScene" uid="uid://dj0ucjvx6se0y" path="res://scenes/UpperBox.tscn" id="2_od04m"]
[ext_resource type="Script" uid="uid://cs0rhged8lxi7" path="res://scripts/ui_audio_player.gd" id="5_6g522"]
[ext_resource type="PackedScene" uid="uid://dqr7h0l8ptwg2" path="res://scenes/SoulUI.tscn" id="5_mbje4"]

[node name="FightUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -75.0
offset_bottom = -252.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2dddj")
metadata/_edit_vertical_guides_ = [60.0, 282.0, 342.0]
metadata/_edit_horizontal_guides_ = [40.0, 80.0, 120.0]

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="UpperBox" parent="VBox" instance=ExtResource("2_od04m")]
layout_mode = 2

[node name="SoulUI" parent="VBox" instance=ExtResource("5_mbje4")]
layout_mode = 2

[node name="BottomOptions" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="FightOption" parent="VBox/BottomOptions" instance=ExtResource("1_qsb8j")]
layout_mode = 2

[node name="ActOption" parent="VBox/BottomOptions" instance=ExtResource("1_qsb8j")]
layout_mode = 2

[node name="ItemOption" parent="VBox/BottomOptions" instance=ExtResource("1_qsb8j")]
layout_mode = 2

[node name="MercyOption" parent="VBox/BottomOptions" instance=ExtResource("1_qsb8j")]
layout_mode = 2

[node name="UIAudioPlayer" type="AudioStreamPlayer" parent="."]
script = ExtResource("5_6g522")

[connection signal="actionFinished" from="VBox/UpperBox" to="." method="_on_upper_box_action_finished"]
[connection signal="optionSelected" from="VBox/UpperBox" to="." method="_on_upper_box_option_selected"]
